@@ -1,4 +1,8 @@
-2011-01-21  Sebastian Pop  <sebastian.pop@amd.com>
+2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>
+
+	* gfortran.dg/graphite/id-23.f: New.
+
+2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>
 
 	* gfortran.dg/graphite/interchange-3.f90: Un-XFAILed.
 
